<resources>
    <string name="app_name">SB Academy Chemistry</string>

    <!-- strings of Register Activity forgot Password Fragments -->
    <string name="app_icon_description">App Icon</string>
    <string name="forgot_pass_textView">Forgot Password ? </string>
    <string name="forgot_pass_description">Don\'t Worry We Just Need Your Registered E-mail ID And Its Done</string>
    <string name="forgot_email_hint">Enter Your Registered E-mail</string>
    <string name="forgot_reset_btn">Reset Password</string>
    <string name="forgot_go_back">&lt; &lt; Go Back</string>

    <!-- strings of Register Activity Sign In Fragments -->
    <string name="signIn_hint_edit_text">Enter E-mail ID</string>
    <string name="signIn_hint_edit_text_password">Enter Password</string>
    <string name="signIn_forgot_pass_textView">Forgot Password ? </string>
    <string name="signIn_button">Sign In</string>
    <string name="signIn_or_text">OR</string>
    <string name="hello_there">Hello there, </string>
    <string name="welcome_back">Welcome back</string>
    <string name="signIn_no_account">Don\'t Have an account? Sign UP!

    </string>  <!-- strings of Register Activity Sign Up Fragments -->
    <string name="signUP_emailId">Enter E-mail ID</string>
    <string name="signUp">Sign UP</string>
    <string name="signUp_fullName">Enter Full Name </string>
    <string name="signUp_pass">Enter Password ( minimum 8 character )</string>
    <string name="signUp_confirm_pass">Re-Enter Your Password</string>
    <string name="signUp_btn">Sign Up</string>
    <string name="signUp_have_account">"Already Have an Account? Sign In! </string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Not Signed In</string>
    <string name="nav_header_subtitle">E-mail Address</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_us">About Us</string>

    <string name="menu_home">SB Academy Chemistry</string>
    <string name="menu_liveClass">Live Class</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_doubts">Ask Doubts</string>
    <string name="menu_want_break">Want a Break</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_Logout">Log Out</string>
    <string name="menu_share">Share App</string>
    <string name="menu_12th">12ᵗʰ Grade</string>
    <string name="menu_11th">11ᵗʰ Grade</string>
    <string name="grade_11th">Grade 11</string>
    <string name="grade_12th">Grade 12</string>
    <string name="menu_periodicTable">Periodic Table</string>

    <string name="home_second">Home Second</string>

    <!-- Quiz Section -->
    <string name="quiz_intro">Welcome To Quiz Section</string>
    <string name="choose_class">Choose the Class</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="sets">Sets</string>

</resources>
