<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/logot"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_liveClass"
            android:icon="@drawable/liveclasses"
            android:title="@string/menu_liveClass" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/quiz"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_askDoubts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_doubts" />
        <item
            android:id="@+id/nav_want_break"
            android:icon="@drawable/takebreak"
            android:title="@string/menu_want_break" />
        <item
            android:id="@+id/nav_Share"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_LogOut"
            android:icon="@drawable/logout"
            android:title="@string/menu_Logout" />
    </group>
</menu>
