<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.SignUpFragment"
    android:background="@drawable/background_theme"
    android:fillViewport="true">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="220dp"
            android:layout_height="152dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_icon_description"
            android:paddingStart="50dp"
            android:src="@drawable/logosb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logot"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/SignUp_email"
            android:layout_width="365dp"
            android:layout_height="51dp"
            android:layout_marginTop="68dp"
            android:autofillHints="@string/signUP_emailId"
            android:background="@drawable/custombtn"
            android:backgroundTint="#60ffffff"
            android:ems="10"
            android:hint="@string/signUP_emailId"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/SignUP_full_name"
            android:layout_width="365dp"
            android:layout_height="51dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="12dp"
            android:autofillHints="@string/signUp_fullName"
            android:ems="10"
            android:hint="@string/signUp_fullName"
            android:inputType="textCapWords"
            android:backgroundTint="#60ffffff"
            android:background="@drawable/custombtn"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_email" />

        <EditText
            android:id="@+id/SignUp_password"
            android:layout_width="365dp"
            android:layout_height="51dp"
            android:layout_marginTop="12dp"
            android:autofillHints="@string/signUp_pass"
            android:ems="10"
            android:backgroundTint="#60ffffff"
            android:background="@drawable/custombtn"
            android:hint="@string/signUp_pass"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUP_full_name" />

        <EditText
            android:id="@+id/SignUp_confirm_password"
            android:layout_width="365dp"
            android:backgroundTint="#60ffffff"
            android:layout_height="51dp"
            android:layout_marginTop="12dp"
            android:autofillHints="@string/signUp_confirm_pass"
            android:ems="10"
            android:hint="@string/signUp_confirm_pass"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/custombtn"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_password" />

        <Button
            android:id="@+id/SignUp_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custombtn"
            android:text="@string/signUp_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_confirm_password" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signIn_or_text"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_btn" />

        <TextView
            android:id="@+id/tv_have_an_account"
            android:layout_width="250dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic|bold"
            android:text="@string/signUp_have_account"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ProgressBar
            android:id="@+id/signup_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/SignUp_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_confirm_password"
            app:layout_constraintVertical_bias="0.52" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="#ffff"
            android:textSize="55sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/SignUp_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.671" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>