<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.quiz.Quiz">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:padding="15dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/quiz_intro"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/choose_class"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/quiz_start_button_11"
        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custombtn"
        android:backgroundTint="#3BD8FF"
        android:text="@string/menu_11th"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/quiz_start_button_12"
        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/custombtn"
        android:backgroundTint="#3BD8FF"
        android:text="@string/menu_12th"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_start_button_11"
        app:layout_constraintVertical_bias="0.326" />

</androidx.constraintlayout.widget.ConstraintLayout>