<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_background">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="215dp"
            android:layout_height="185dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/app_icon_description"
            android:src="@drawable/logosb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logot" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_pass_textView"
            android:textColor="#ffff"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_pass_description"
            android:textAlignment="center"
            android:textColor="#DC1A2A"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/forgotPasswordEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:ems="10"
            android:hint="@string/forgot_email_hint"
            android:autofillHints="@string/forgot_email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custombtn"
            android:text="@string/forgot_reset_btn"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/forgotPasswordGoBackTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmail"
            app:layout_constraintVertical_bias="0.365" />

        <TextView
            android:id="@+id/forgotPasswordGoBackTV"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginBottom="76dp"
            android:text="@string/forgot_go_back"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/forgotPasswordProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:theme="@style/RedProgressbar"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmail"
            app:layout_constraintVertical_bias="0.523" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>